--- a/aboutus.html
+++ b/aboutus.html
@@ -27,7 +27,7 @@
                 Na <strong>HandSoft</strong>, nos dedicamos a fornecer soluções tecnológicas inovadoras e seguras para empresas e indivíduos. Com anos de experiência no setor, nossa missão é criar plataformas que priorizem a proteção dos dados e a eficiência nas operações.
             </p>
             <p>
-                Nosso time é formado por especialistas em desenvolvimento de software, segurança digital e design de interface, comprometidos em entregar soluções que combinam simplicidade, agilidade e segurança.
+                Nosso grupo é bem dividido e variado aonde cada um complementa uma parte do projeto final para melhor desenvolvimento geral.
             </p>
     
             <div class="team">
@@ -35,27 +35,27 @@
                 <div class="team-members">
                     <div class="member">
                         <img src="images/member1.jpg" alt="Integrante 1">
-                        <h4>João Silva</h4>
-                        <p>CEO e Fundador</p>
-                        <p>Especialista em segurança digital e inovação tecnológica, com mais de 15 anos de experiência no setor.</p>
+                        <h4>Arthur Alves</h4>
+                        <p>Pesquisa E Implementação</p>
+                        <p>Responsável pelo programa e sua implementação</p>
                     </div>
                     <div class="member">
                         <img src="images/member2.jpg" alt="Integrante 2">
-                        <h4>Ana Costa</h4>
-                        <p>CTO</p>
-                        <p>Responsável pela tecnologia de ponta e desenvolvimento de sistemas inovadores que impulsionam nossos produtos.</p>
+                        <h4>Gabriel Davi</h4>
+                        <p>Líder</p>
+                        <p>Principal mente responsável pela coordenação do grupo e idealização do projeto.</p>
                     </div>
                     <div class="member">
                         <img src="images/member3.jpg" alt="Integrante 3">
-                        <h4>Lucas Pereira</h4>
-                        <p>Design Lead</p>
-                        <p>Especialista em design de interfaces, focado em criar experiências intuitivas e acessíveis para todos os usuários.</p>
+                        <h4>Gabriel Ventura</h4>
+                        <p>Prototipagem e Desenvolvimento</p>
+                        <p>Responsável pelo site e o desenvolvimento do BM Canvas e colaboraçao no projeto final.</p>
                     </div>
                     <div class="member">
                         <img src="images/member4.jpg" alt="Integrante 4">
-                        <h4>Maria Fernandes</h4>
-                        <p>Gerente de Projetos</p>
-                        <p>Experiente em gestão de equipes ágeis e entrega de soluções eficientes, garantindo a satisfação dos clientes.</p>
+                        <h4>Mariana Vianna</h4>
+                        <p>Pesquisa e Design</p>
+                        <p>Responsável pela pesquisa da problemática e suas demanadas assim como o desenvolvmento do slide.</p>
                     </div>
                 </div>
             </div>
