--- a/aboutus.html
+++ b/aboutus.html
@@ -24,7 +24,7 @@
         <div class="about-content">
             <h2>Sobre Nós</h2>
             <p>
-                Na <strong>HandSoft</strong>, nos dedicamos a fornecer soluções tecnológicas inovadoras e seguras para empresas e indivíduos. Com anos de experiência no setor, nossa missão é criar plataformas que priorizem a proteção dos dados e a eficiência nas operações.
+                Na <strong>HandSoft</strong>, nos dedicamos a fornecer soluções tecnológicas inovadoras e seguras para empresas e indivíduos. Com nossa inovadora proposta, nossa missão é criar plataformas que priorizem a segurança e a eficiência nos setores industriais.
             </p>
             <p>
                 Nosso grupo é bem dividido e variado aonde cada um complementa uma parte do projeto final para melhor desenvolvimento geral.
