--- a/contact.html
+++ b/contact.html
@@ -28,11 +28,11 @@
             <div class="contact-info">
                 <h3>Informações de Contato</h3>
                 <p><strong>Email:</strong> <a href="mailto:handsoftsac@gmail.com.br">handsoftsac@gmail.com.br</a></p>
-                <p><strong>Telefone:</strong> (11) 1234-5678</p>
+                <p><strong>Telefone:</strong> (21) 94002-8922</p>
                 <p><strong>Redes Sociais:</strong></p>
                 <p>
-                    <a href="https://facebook.com/handsoft" target="_blank">Facebook</a> |
-                    <a href="https://twitter.com/handsoft" target="_blank">Twitter</a> |
+                    <a href="https://facebook.com/" target="_blank">Facebook</a> |
+                    <a href="https://instagram.com/handsoft_pt" target="_blank">Instagram</a> |
                     <a href="https://linkedin.com/company/handsoft" target="_blank">LinkedIn</a>
                 </p>
             </div>
