--- a/index.html
+++ b/index.html
@@ -40,15 +40,15 @@
         <div class="services">
             <div class="service">
                 <h3>Segurança máxima</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam magna ex, sagittis eget vehicula a, placerat sit amet nibh. Nulla pretium, sapien at suscipit venenatis, orci mauris dignissim lacus, congue pretium orci sem quis diam. Aenean ac nulla bibendum, pretium elit at, aliquam massa. Vivamus at ullamcorper lectus. Etiam ornare ipsum quis mi fermentum, eu suscipit nisi convallis. Suspendisse at pellentesque mi. Etiam et felis pretium, pharetra leo in, pretium erat. Nulla facilisi.</p>
+                <p>Nossos serviços são focados em evitar a exposição dos colaboradores em locais perigosos e prezamos pela segurança de todos no ambiente industrial, químico e dentre diversos outros.</p>
             </div>
             <div class="service">
                 <h3>Resposta instantânea e eficaz</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam magna ex, sagittis eget vehicula a, placerat sit amet nibh. Nulla pretium, sapien at suscipit venenatis, orci mauris dignissim lacus, congue pretium orci sem quis diam. Aenean ac nulla bibendum, pretium elit at, aliquam massa. Vivamus at ullamcorper lectus. Etiam ornare ipsum quis mi fermentum, eu suscipit nisi convallis. Suspendisse at pellentesque mi. Etiam et felis pretium, pharetra leo in, pretium erat. Nulla facilisi.</p>
+                <p>Com tecnologia de ponta, nossos produtos possuem uma resposta tátil instantânea e que visa movimentos exatos sem nenhum tipo de atraso além de bem funcional.</p>
             </div>
             <div class="service">
                 <h3>Barato e Simples</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam magna ex, sagittis eget vehicula a, placerat sit amet nibh. Nulla pretium, sapien at suscipit venenatis, orci mauris dignissim lacus, congue pretium orci sem quis diam. Aenean ac nulla bibendum, pretium elit at, aliquam massa. Vivamus at ullamcorper lectus. Etiam ornare ipsum quis mi fermentum, eu suscipit nisi convallis. Suspendisse at pellentesque mi. Etiam et felis pretium, pharetra leo in, pretium erat. Nulla facilisi.</p>
+                <p>Somos os únicos do mercado a oferecer um serviço como este por um preço acessível e simples para a utilização e manutençao.</p>
             </div>
         </div>
     </section>
