--- a/services.html
+++ b/services.html
@@ -14,7 +14,6 @@
             <ul class="nav-links">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="aboutus.html">Sobre Nós</a></li>
-                <li><a href="services.html">Serviços</a></li>
                 <li><a href="contact.html">Contatos</a></li>
             </ul>
         </nav>
@@ -28,18 +27,18 @@
                 <div class="project-details">
                     <h3>Detalhes do Nosso Projeto</h3>
                     <p>
-                        Nosso projeto é uma solução inovadora projetada para otimizar a segurança e a eficiência dos processos digitais. Desenvolvemos um sistema robusto que não só protege dados sensíveis, mas também garante uma operação suave e confiável.
+                        Nosso projeto é uma solução inovadora projetada para evitar acidentes e lesões que ocorrem no mundo do trabalho, o código desenvolvido foi feito especialmente para suprir todas as demandas das empresas e funcionando perfeitamente com a posibilidade de futuras atualizações para maior portabilidade além de mais novas adições.
                     </p>
                     <p>
-                        Com um design intuitivo e funcionalidade avançada, nosso produto se adapta às necessidades de diversas indústrias, oferecendo uma interface amigável e recursos poderosos que facilitam o gerenciamento e a proteção das informações.
+                        O código feito e editado por nós é totalmente eficiente e reproduz todos os movimentos realizados pelas mãos assim como seus respectivos gestos e reproduzidos pelo braço mencânico instantâneamente (o braço não faz parte do projeto, oferecemos apenas o código de implementação dele).
                     </p>
                     <p>
                         Entre suas principais funcionalidades estão:
                     </p>
                     <ul>
-                        <li><strong>Segurança Avançada:</strong> Proteção contra ameaças digitais com criptografia de ponta.</li>
-                        <li><strong>Interface Intuitiva:</strong> Design de fácil uso, adaptável a diferentes dispositivos e necessidades.</li>
-                        <li><strong>Relatórios e Análises:</strong> Ferramentas para gerar relatórios detalhados e análises de segurança.</li>
+                        <li><strong>Atualizaçoes Frequentes:</strong> Nos preocupamos em sempre melhorar e desenvolver novas aplicações.</li>
+                        <li><strong>Alta Responsabilidade:</strong> Com uma latência mínima, é possível realizar a maioria das ações correspondentes e rápidas.</li>
+                        <li><strong>:</strong> Ferramentas para gerar relatórios detalhados e análises de segurança.</li>
                     </ul>
                 </div>
             </div>
