--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
     
     <header>
         <nav class="navbar">
-            <div class="logo">HandSoft</div>
+            <div class="logo"><li><a href="index.html">HandSoft</a></li></div>
             <ul class="nav-links">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="aboutus.html">Sobre Nós</a></li>
