--- a/aboutus.html
+++ b/aboutus.html
@@ -10,9 +10,8 @@
     
     <header>
         <nav class="navbar">
-            <div class="logo">HandSoft</div>
+            <div class="logo"><li><a href="index.html">HandSoft</a></li></div>
             <ul class="nav-links">
-                <li><a href="index.html">Home</a></li>
                 <li><a href="services.html">Serviços</a></li>
                 <li><a href="contact.html">Contatos</a></li>
             </ul>
