--- a/services.html
+++ b/services.html
@@ -10,8 +10,9 @@
     
     <header>
         <nav class="navbar">
-            <div class="logo"><li><a href="index.html">HandSoft</a></li></div>
+            <div class="logo">HandSoft</div>
             <ul class="nav-links">
+                <li><a href="index.html">Home</a></li>
                 <li><a href="aboutus.html">Sobre Nós</a></li>
                 <li><a href="contact.html">Contatos</a></li>
             </ul>
