--- a/aboutus.html
+++ b/aboutus.html
@@ -12,6 +12,7 @@
         <nav class="navbar">
             <div class="logo"><li><a href="index.html">HandSoft</a></li></div>
             <ul class="nav-links">
+                <li><a href="index.html">Home</a></li>
                 <li><a href="services.html">Serviços</a></li>
                 <li><a href="contact.html">Contatos</a></li>
             </ul>
