--- a/services.html
+++ b/services.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HandSoft - Home</title>
+    <title>HandSoft - Serviços</title>
     <link rel="stylesheet" href="styleservice.css">
 </head>
 <body>
