--- a/contact.html
+++ b/contact.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HandSoft - Home</title>
+    <title>HandSoft - Nossos Contatos</title>
     <link rel="stylesheet" href="stylectt.css">
 </head>
 <body>
     
     <header>
         <nav class="navbar">
-            <div class="logo"><li><a href="index.html">HandSoft</a></li></div>
+            <div class="logo">HandSoft</div>
             <ul class="nav-links">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="aboutus.html">Sobre Nós</a></li>
