--- a/services.html
+++ b/services.html
@@ -38,7 +38,7 @@
                     <ul>
                         <li><strong>Atualizaçoes Frequentes:</strong> Nos preocupamos em sempre melhorar e desenvolver novas aplicações.</li>
                         <li><strong>Alta Responsabilidade:</strong> Com uma latência mínima, é possível realizar a maioria das ações correspondentes e rápidas.</li>
-                        <li><strong>:</strong> Ferramentas para gerar relatórios detalhados e análises de segurança.</li>
+                        <li><strong>Auxílio Técnico:</strong> Caso nosso produto não funcione devidamente, nossos funcionários estão prontos para consertar e ajudar.</li>
                     </ul>
                 </div>
             </div>
