--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <section id="about" class="about-section">
         <div class="about-content">
             <h2>Sobre Nós</h2>
-            <p>Somos especializados em criar sites elegantes, funcionais e responsivos que proporcionam uma experiência agradável ao usuário.</p>
+            <p>Somos especializados em criar soluções funcionais e responsivas que proporcionam uma experiência agradável a todos.</p>
         </div>
     </section>
 
